Change CreateNewTeam path to /taas/createnewteam. Fix placholder alignment in Job Title input.

--- a/src/routes/CreateNewTeam/pages/InputJobDescription/styles.module.scss
+++ b/src/routes/CreateNewTeam/pages/InputJobDescription/styles.module.scss
@@ -10,4 +10,9 @@
 
 .job-title {
   margin-bottom: 15px;
+
+  input:not([type="checkbox"]) {
+    line-height: normal;
+    padding: 8px 15px;
+  }
 }
